test/algeff/shallow1.kk.out
test/algeff/shallow1.kk(14,17): error: invalid syntax
 unexpected "(.("
 expecting "<" or "("